<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jollaman999.remotecmd.RemoteCMD">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <EditText
                android:id="@+id/et_main_address"
                android:textAlignment="center"
                android:hint="@string/main_address_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_main_password"
                android:textAlignment="center"
                android:hint="@string/main_password_hint"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_main_address"/>

            <Button
                android:id="@+id/bt_main_connect"
                android:text="@string/main_connect"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_main_password"/>

            <TextView
                android:id="@+id/tv_main_error_msg"
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bt_main_connect"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
